--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www",
+    "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon --inspect=9229 bin/www",
     "prd": "cross-env NODE_ENV=production pm2 start bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --ext .js ./src",
+    "test": "cross-env NODE_ENV=test jest --runInBand --forceExit --colors"
   },
   "dependencies": {
     "ajv": "^6.12.6",
@@ -28,7 +29,12 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
-    "nodemon": "^1.19.1"
+    "eslint": "^7.15.0",
+    "jest": "^26.6.3",
+    "nodemon": "^1.19.1",
+    "pre-commit": "^1.2.2",
+    "supertest": "^6.0.1"
   }
 }
