--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ajv": "^6.12.6",
+    "date-fns": "^2.16.1",
     "debug": "^4.1.1",
     "ejs": "^2.3.4",
     "formidable-upload-koa": "^1.0.1",
